--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+struct.c/marcos mandou.c
+struct.c/questão 2 propostos.c
+struct.c/teste 1 chat.c
